197: fix gdpr text style on mobile devices

--- a/frontend/src/components/terms-of-service/TermsOfServicePage.module.scss
+++ b/frontend/src/components/terms-of-service/TermsOfServicePage.module.scss
@@ -33,6 +33,7 @@
 
 .wrapper {
   ul {
+    font-weight: 400;
     list-style-type: disc;
   }
 
